# Triangles3D

./: CMakeLists.txt  README.md  conanfile.py  gmon.out  pyproject.toml  test
.github/workflows/: worklow.yml
include/: ANSI_colors.hpp  doubles.hpp  line.hpp  lingeo.hpp  octree.hpp  plane.hpp  point.hpp  real_numbers.hpp  reals_numbers.hpp  segment.hpp  triangle.hpp
include/Triangles3D/: ANSI_colors.hpp  line.hpp  octree.hpp  segment.hpp  triangle.hpp
src/: CMakeLists.txt  triangles.cpp
tests/: CMakeLists.txt  trian_unit_test.cpp
tests/end_to_end/: CMakeLists.txt  generate.py  run_tests.py
tests/end_to_end/answers/: answer_001.out  answer_002.out  answer_003.out  answer_004.out  answer_005.out  answer_006.out  answer_007.out  answer_008.out  answer_009.out  answer_010.out
tests/end_to_end/answers_new/: answer_001.ans  answer_002.ans  answer_003.ans  answer_004.ans  answer_005.ans  answer_006.ans  answer_007.ans  answer_008.ans  answer_009.ans  answer_010.ans
tests/end_to_end/answers_old/: answer_001.ans  answer_002.ans  answer_003.ans  answer_004.ans  answer_005.ans  answer_007.ans  answer_008.ans  answer_010.ans
tests/end_to_end/old_version/: CMakeLists.txt  triangle_old.hpp  triangles_old.cpp
tests/end_to_end/tests_dat/: test_001.in  test_002.in  test_003.in  test_004.in  test_005.in  test_006.in  test_007.in  test_008.in  test_009.in  test_010.in
tests/end_to_end/tests_in/: test_001.in  test_002.in  test_003.in  test_004.in  test_005.in  test_006.in  test_007.in  test_008.in  test_009.in  test_010.in
tests/old_version/: triangle_old.hpp  triangles_old.cpp
tests/unit/: CMakeLists.txt  trian_unit_test.cpp  triangles_unit_test.cpp
